--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Hello, world!</title>
 </head>
@@ -135,15 +135,26 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary" data-dismiss="modal" id="choices-btn">Let's Go!</button>
+                    <button type="submit" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#resultsModal" id="choices-btn">Let's Go!</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="container">
+    <div class="modal fade" id="resultsModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">We found the very best, just for you</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
 
-        <!-- <div class="card">
+                    <div class="container-fluid">
+
+                        <!-- <div class="card">
                     <div class="card-header" id="user-selected">
                         User Data
                     </div>
@@ -163,91 +174,119 @@
                     <button class="btn btn-primary" type="submit" id="save-user-btn">Submit</button>
                 </div> -->
 
-        <div class="row results">
-            <div class="col-sm-8">
+                        <div class="row">
+                            <div class="col-sm-8">
 
-                <!-- Food Info Display -->
+                                <!-- Food Info Display -->
 
-                <div class="container" id="food">
-                    <h2>Food</h2>
-                    <div class="row" id="food-display">
-                        <div class="col-sm-6">
-                            <div class="card choice" id="z-food-card">
-                                <div class="card-header">
-                                    Best Reviewed
+                                <h2>Food</h2>
+                                <div class="row" id="food-display">
+                                    <div class="col-sm-6">
+                                        <div class="card choice" id="z-food-card">
+                                            <div class="card-header">
+                                                Best Reviewed
+                                            </div>
+                                            <div class=img-div>
+                                                <img src="" class="card-img-top" alt="" id="z-image">
+                                            </div>
+                                            <div class="card-body">
+                                                <h5 class="card-title" id="z-restaurant"></h5>
+                                                <p class="card-text" id="z-address"></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div class="card choice food" id="y-food-card">
+                                            <div class="card-header">
+                                                Loved by Locals
+                                            </div>
+                                            <div class="img-div">
+                                                <img src="" class="card-img-top" alt="" id="y-image">
+                                            </div>
+                                            <div class="card-body">
+                                                <h5 class="card-title" id="y-restaurant"></h5>
+                                                <p class="card-text" id="y-address"></p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class=img-div>
-                                    <img src="" class="card-img-top" alt="" id="z-image">
+
+                                <!-- Event Info Display -->
+
+                                <h2>Events</h2>
+                                <div class="row" id="tm-event-display">
+                                    <div class="col-sm-6">
+                                        <div class="card choice" id="tm-card">
+                                            <div class="card-header">
+                                                Large Venue
+                                            </div>
+                                            <div class="img-div">
+                                                <img src="" class="card-img-top" alt="" id="tm-image">
+                                            </div>
+                                            <div class="card-body">
+                                                <h5 class="card-title" id="tm-name"></h5>
+                                                <p class="card-text" id="tm-info"></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div class="card choice" id="eb-card">
+                                            <div class="card-header">
+                                                Small Venue
+                                            </div>
+                                            <div class="img-div">
+                                                <img src="" class="card-img-top" alt="" id="eb-image">
+                                            </div>
+                                            <div class="card-body">
+                                                <h5 class="card-title" id="eb-name"></h5>
+                                                <p class="card-text" id="eb-link"></p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="card-body">
-                                    <h5 class="card-title" id="z-restaurant"></h5>
-                                    <p class="card-text" id="z-address"></p>
+
+                                <!-- Activity Info Display -->
+
+                                <h2>Exercise</h2>
+                                <div class="row" id="">
+                                    <div class="col-sm-6">
+                                        <div class="card choice">
+                                            <div class="card-header">
+                                                Sort Option 1
+                                            </div>
+                                            <div class="img-div">
+                                                <img src="" class="card-img-top" alt="" id="">
+                                            </div>
+                                            <div class="card-body">
+                                                <h5 class="card-title" id=""></h5>
+                                                <p class="card-text" id=""></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div class="card choice">
+                                            <div class="card-header">
+                                                Sort Option 2
+                                            </div>
+                                            <div class="img-div">
+                                                <img src="" class="card-img-top" alt="" id="">
+                                            </div>
+                                            <div class="card-body">
+                                                <h5 class="card-title" id=""></h5>
+                                                <p class="card-text" id=""></p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="card choice food" id="y-food-card">
-                                <div class="card-header">
-                                    Loved by Locals
-                                </div>
-                                <div class="img-div">
-                                    <img src="" class="card-img-top" alt="" id="y-image">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title" id="y-restaurant"></h5>
-                                    <p class="card-text" id="y-address"></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
-                <!-- Event Info Display -->
+                            <!-- Map Display -->
 
-                <div class="container" id="events">
-                    <h2>Events</h2>
-                    <div class="row" id="tm-event-display">
-                        <div class="col-sm-6">
-                            <div class="card choice" id="tm-card">
-                                <div class="card-header">
-                                    Large Venue
-                                </div>
-                                <div class="img-div">
-                                    <img src="" class="card-img-top" alt="" id="tm-image">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title" id="tm-name"></h5>
-                                    <p class="card-text" id="tm-info"></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="card choice" id="eb-card">
-                                <div class="card-header">
-                                    Small Venue
-                                </div>
-                                <div class="img-div">
-                                    <img src="" class="card-img-top" alt="" id="eb-image">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title" id="eb-name"></h5>
-                                    <p class="card-text" id="eb-link"></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Activity Info Display -->
-
-                <div id="health">
-                    <div class="container" id="events">
-                        <h2>Exercise</h2>
-                        <div class="row" id="">
-                            <div class="col-sm-6">
-                                <div class="card choice">
-                                    <div class="card-header">
-                                        Sort Option 1
+                            <div class="col-sm-4" id="maps">
+                                <h2>Map</h2>
+                                <div class="card">
+                                    <div class="card-header" id="map-city">
+                                        <span id="map-name">City Name</span><span><span>Current Temp: </span><span id="map-temp">--</span></span>
                                     </div>
                                     <div class="img-div">
                                         <img src="" class="card-img-top" alt="" id="">
@@ -256,46 +295,18 @@
                                         <h5 class="card-title" id=""></h5>
                                         <p class="card-text" id=""></p>
                                     </div>
+
                                 </div>
                             </div>
-                            <div class="col-sm-6">
-                                <div class="card choice">
-                                    <div class="card-header">
-                                        Sort Option 2
-                                    </div>
-                                    <div class="img-div">
-                                        <img src="" class="card-img-top" alt="" id="">
-                                    </div>
-                                    <div class="card-body">
-                                        <h5 class="card-title" id=""></h5>
-                                        <p class="card-text" id=""></p>
-                                    </div>
-                                </div>
-                            </div>
+
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <!-- Map Display -->
-
-            <div class="col-sm-4" id="maps">
-                <h2>Map</h2>
-                <div class="card">
-                    <div class="card-header" id="map-city">
-                        <span id="map-name">City Name</span><span><span>Current Temp: </span><span id="map-temp">--</span></span>
-                    </div>
-                    <div class="img-div">
-                        <img src="" class="card-img-top" alt="" id="">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title" id=""></h5>
-                        <p class="card-text" id=""></p>
-                    </div>
-
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" id="">Save Info</button>
                 </div>
             </div>
-
         </div>
     </div>
 
