update results modal

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                                     <div class="col-sm-6">
                                         <div class="card choice" id="tm-card">
                                             <div class="card-header">
-                                                Large Venue
+                                                Large Events
                                             </div>
                                             <div class="img-div">
                                                 <img src="" class="card-img-top" alt="" id="tm-image">
@@ -271,7 +271,7 @@
                                     <div class="col-sm-6">
                                         <div class="card choice" id="eb-card">
                                             <div class="card-header">
-                                                Small Venue
+                                                Local Events
                                             </div>
                                             <div class="img-div">
                                                 <img src="" class="card-img-top" alt="" id="eb-image">
@@ -356,10 +356,10 @@
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <h5 class="card-title" id="">Food</h5>
+                        <h5 class="card-title" id="">Enjoy Dinner</h5>
                         <p class="card-text test" id="savedChoice-food"></p>
                         <p class="card-text test" id="savedChoice-food-address"></p>
-                        <h5 class="card-title" id="">Event</h5>
+                        <h5 class="card-title" id="">Myabe a show?</h5>
                         <p class="card-text test" id="savedChoice-event"></p>
                         <p class="card-text test" id="savedChoice-event-buy"></p>
                         <h5 class="card-title" id="">Exercise</h5>
@@ -367,7 +367,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary" id="save-choices-btn">Save</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal" id="save-choices-btn">Save</button>
                     </div>
                 </div>
 
