cards change color on click, user can't skip entering name or city

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <p>______________________</p>
         <div class="container team-inside">
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-3 team-member">
                     <div class="team-img">
                         <img class="rounded-circle" src="./assets/images/patrick.png" height="140" width="140">
                     </div>
@@ -91,23 +91,23 @@
                     <p>Events</p>
                     <a class="btn btn-outline-light" href="https://patrickj188.github.io/Responsive-Portfolio/portfolio.html" target="blank">Portfolio</a>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 team-member">
                     <div class="team-img">
                         <img class="rounded-circle" src="./assets/images/eli.jpg" height="140" width="140">
                     </div>
                     <h4>Eli</h4>
                     <p>Fitness</p>
-                    <a class="btn btn-outline-light" href="https://crcass.github.io/bootstrap-portfolio/portfolio.html" target="blank">Portfolio</a>
+                    <a class="btn btn-outline-light" href="https://evg7393.github.io/Responsive-Portfolio/portfolio.html" target="blank">Portfolio</a>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 team-member">
                     <div class="team-img">
                         <img class="rounded-circle" src="./assets/images/chris.png" height="140" width="140">
                     </div>
                     <h4>Chris</h4>
                     <p>Food & Style</p>
-                    <a class="btn btn-outline-light" href="https://evg7393.github.io/Responsive-Portfolio/portfolio.html" target="blank">Portfolio</a>
+                    <a class="btn btn-outline-light" href="https://crcass.github.io/bootstrap-portfolio/portfolio.html" target="blank">Portfolio</a>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-3 team-member">
                     <div class="team-img">
                         <img class="rounded-circle" src="./assets/images/daniel.jpg" height="140" width="140">
                     </div>
@@ -323,7 +323,7 @@
 
                             <div class="col-sm-4" id="maps">
                                 <h2>Map</h2>
-                                <div class="card">
+                                <div class="card map-card">
                                     <div class="card-header" id="map-city">
                                         <span id="map-name">City Name</span><span><span>Current Temp: </span><span id="map-temp">--</span></span>
                                     </div>
@@ -377,7 +377,7 @@
 
     <!-- Footer -->
 
-    <footer class="bg-secondary">
+    <footer class="bg-dark">
         <div class="container text-center">
             <span>♥︎ 2019 team WKND</span>
         </div>
