--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" id="results">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-sm-8">
