added activity logic

--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@
                         <p class="card-text test" id="savedChoice-event-buy"></p>
                         <h5 class="card-title" id="">Exercise</h5>
                         <p class="card-text" id="user-exercise"></p>
+                        <p class="card-text" id="user-exercise-address"></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
