I WANT MY MAP BACK

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 
         <div class="modal fade" id="saveModal" role="dialog">
             <div class="modal-dialog">
-                <div class="modal-content">
+                <div class="modal-content" id="save">
                     <div class="modal-header">
                         <h5 class="modal-title">Save your stuff!</h5>
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -358,9 +358,11 @@
                         <h5 class="card-title" id="">Enjoy Dinner</h5>
                         <p class="card-text test" id="savedChoice-food"></p>
                         <p class="card-text test" id="savedChoice-food-address"></p>
+                        <p class="text-center">__________</p>
                         <h5 class="card-title" id="">Maybe a show?</h5>
                         <p class="card-text test" id="savedChoice-event"></p>
                         <p class="card-text test" id="savedChoice-event-buy"></p>
+                        <p class="text-center">__________</p>
                         <h5 class="card-title" id="">Exercise</h5>
                         <p class="card-text" id="user-exercise"></p>
                         <p class="card-text" id="user-exercise-address"></p>
