--- a/index.html
+++ b/index.html
@@ -332,6 +332,12 @@
                                         <div id="map">
 
                                         </div>
+                                        <p class="text-center break">__________</p>
+                                        <p class="card-text test" id="savedChoice-food"></p>
+                                        <p class="text-center break">______</p>
+                                        <p class="card-text test" id="savedChoice-event"></p>
+                                        <p class="text-center break">______</p>
+                                        <p class="card-text" id="user-exercise"></p>
                                     </div>
 
                                 </div>
@@ -358,7 +364,7 @@
                         <h5 class="card-title" id="">Enjoy Dinner</h5>
                         <p class="card-text test" id="savedChoice-food"></p>
                         <p class="card-text test" id="savedChoice-food-address"></p>
-                        <p class="text-center">__________</p>
+                        <p class="text-center ">__________</p>
                         <h5 class="card-title" id="">Maybe a show?</h5>
                         <p class="card-text test" id="savedChoice-event"></p>
                         <p class="card-text test" id="savedChoice-event-buy"></p>
@@ -368,8 +374,8 @@
                         <p class="card-text" id="user-exercise-address"></p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary" data-dismiss="modal" id="save-choices-btn">Save</button>
+                        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#saveModal">Close</button>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#saveModal" id="save-choices-btn">Save</button>
                     </div>
                 </div>
 
