--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                                                 <img src="" class="card-img-top" alt="" id="sup-image">
                                             </div>
                                             <div class="card-body">
-                                                <h5 class="card-title" id="sup-image"></h5>
+                                                <h5 class="card-title" id="sup-business"></h5>
                                                 <p class="card-text" id="sup-address"></p>
                                             </div>
                                         </div>
@@ -333,11 +333,11 @@
 
                                         </div>
                                         <p class="text-center break">__________</p>
-                                        <p class="card-text test" id="savedChoice-food"></p>
+                                        <p class="card-text test savedChoice-food"></p>
                                         <p class="text-center break">______</p>
-                                        <p class="card-text test" id="savedChoice-event"></p>
+                                        <p class="card-text test savedChoice-event"></p>
                                         <p class="text-center break">______</p>
-                                        <p class="card-text" id="user-exercise"></p>
+                                        <p class="card-text user-exercise"></p>
                                     </div>
 
                                 </div>
@@ -362,15 +362,15 @@
                     </div>
                     <div class="modal-body">
                         <h5 class="card-title" id="">Enjoy Dinner</h5>
-                        <p class="card-text test" id="savedChoice-food"></p>
+                        <p class="card-text test savedChoice-food"></p>
                         <p class="card-text test" id="savedChoice-food-address"></p>
                         <p class="text-center ">__________</p>
                         <h5 class="card-title" id="">Maybe a show?</h5>
-                        <p class="card-text test" id="savedChoice-event"></p>
+                        <p class="card-text test savedChoice-event"></p>
                         <p class="card-text test" id="savedChoice-event-buy"></p>
                         <p class="text-center">__________</p>
                         <h5 class="card-title" id="">Exercise</h5>
-                        <p class="card-text" id="user-exercise"></p>
+                        <p class="card-text user-exercise"></p>
                         <p class="card-text" id="user-exercise-address"></p>
                     </div>
                     <div class="modal-footer">
