pulling all that doog stuff

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                         <p class="card-text test" id="savedChoice-event-buy"></p>
                         <p class="text-center">__________</p>
                         <h5 class="card-title" id="">Exercise</h5>
-                        <p class="card-text" id="user-exercise"></p>
+                        <p class="card-text user-exercise"  id="user-exercise"></p>
                         <p class="card-text" id="user-exercise-address"></p>
                     </div>
                     <div class="modal-footer">
