fixed event listeners on modals

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </div>
     <div class="text-center button-wrapper">
-        <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#startModal">Get Started</button>
+        <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#startModal" id="start-button">Get Started</button>
     </div>
 
     <!-- Info -->
@@ -137,7 +137,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#cityModal" id="name-btn">Next!</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#cityModal" id="name-btn">Next!</button>
                 </div>
             </div>
         </div>
