--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                     <div class="modal-footer justify-content-between">
                         <label for="phone">Enter your phone #
                             <br>We'll send your stuff</label>
-                        <input type="tel" name="phone" id="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" minlength="10" maxlength="10">
+                        <input type="tel" class="form-control" name="phone" id="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" minlength="10" maxlength="10">
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#saveModal" id="save-choices-btn">Send</button>
                     </div>
                 </div>
