event link opens in new window

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                         <p class="card-text test" id="savedChoice-food-address"></p>
                         <h5 class="card-title save-header">Maybe a show?</h5>
                         <p class="card-text test savedChoice-event"></p>
-                        <a class="card-text test" href="" id="savedChoice-event-buy">Click to Learn More</a>
+                        <a class="card-text test" href="" target="blank" id="savedChoice-event-buy">Click to Learn More</a>
                         <h5 class="card-title save-header">Get that workout in</h5>
                         <p class="card-text user-exercise"></p>
                         <p class="card-text" id="user-exercise-address"></p>
