--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="close">Close</button>
                     <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#saveModal">Save Info</button>
                 </div>
             </div>
