minor html update

--- a/index.html
+++ b/index.html
@@ -180,15 +180,15 @@
                     <form class="container">
                         <div class="form-group">
                             <label for="user-food">What kind of food makes your mouth water?</label>
-                            <input type="text" class="form-control" id="user-food">
+                            <input type="text" class="form-control" id="user-food" placeholder="optional">
                         </div>
                         <div class="form-group">
                             <label for="user-event">What's your favorite type of music?</label>
-                            <input type="text" class="form-control" id="user-event">
+                            <input type="text" class="form-control" id="user-event" placeholder="optional">
                         </div>
                         <div class="form-group">
                             <label for="user-activity">How do you stay active?</label>
-                            <input type="text" class="form-control" id="user-activity">
+                            <input type="text" class="form-control" id="user-activity" placeholder="optional">
                         </div>
                     </form>
                 </div>
@@ -288,7 +288,7 @@
                                     <div class="col-sm-6">
                                         <div class="card choice" id="sup-card">
                                             <div class="card-header">
-                                                Random 'Surprise Me'
+                                                Hidden Gems
                                             </div>
                                             <div class="img-div">
                                                 <img src="" class="card-img-top" alt="" id="sup-image">
@@ -302,7 +302,7 @@
                                     <div class="col-sm-6">
                                         <div class="card choice" id="yelp-card">
                                             <div class="card-header">
-                                                Voted Most Popular
+                                                Most Popular
                                             </div>
                                             <div class="img-div">
                                                 <img src="" class="card-img-top" id="yelp-image">
