--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:400,600,700,800,900" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Hello, world!</title>
@@ -16,7 +17,7 @@
     <!-- Nav-->
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top justify-content-between">
-        <a class="navbar-brand" href="#">BRAND NAME</a>
+        <a class="navbar-brand" href="#"><span id="logo">SIGNAL</span> <span id="tagline">We Know.</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -71,6 +72,7 @@
             <h2>How it works</h2>
             <p>Simply enter your name & preferences for food, events, and exercise. Let us handle the rest. In seconds you'll have the very best of each category, right at your fingertips. We'll give you two great options to choose from in each category and directions to each place.</p>
             <p>We're obsessed with sorting through the noise to get you out of that hotel room and in to the best places your city has to offer.</p>
+            <p>Welcome to Signal. We Know.</p>
         </div>
     </div>
 
