--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             <div class="modal-dialog">
                 <div class="modal-content" id="save">
                     <div class="modal-header">
-                        <h5 class="modal-title">Save your stuff!</h5>
+                        <h5 class="modal-title">Send a Signal</h5>
                         <button type="button" class="close" data-toggle="modal" data-target="#saveModal">&times;</button>
                     </div>
                     <div class="modal-body">
@@ -370,7 +370,7 @@
                     </div>
                     <div class="modal-footer justify-content-between">
                         <label for="phone">Enter your phone #
-                            <br>We'll send your stuff</label>
+                            <br>We'll send a Signal</label>
                         <input type="tel" class="form-control" name="phone" id="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" minlength="10" maxlength="10">
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#saveModal" id="save-choices-btn">Send</button>
                     </div>
