html update, included readme

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <img class="rounded-circle" src="./assets/images/patrick.png" height="140" width="140">
                     </div>
                     <h4>Patrick</h4>
-                    <p>Events</p>
+                    <p>Events & Data</p>
                     <a class="btn btn-outline-light" href="https://patrickj188.github.io/Responsive-Portfolio/portfolio.html" target="blank">Portfolio</a>
                 </div>
                 <div class="col-sm-3 team-member">
