minor html update

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                                 Best Reviewed
                                             </div>
                                             <div class=img-div>
-                                                <img src="" class="card-img-top" alt="" id="z-image">
+                                                <img src="" class="card-img-top" id="z-image">
                                             </div>
                                             <div class="card-body">
                                                 <h5 class="card-title" id="z-restaurant"></h5>
@@ -240,7 +240,7 @@
                                                 Loved by Locals
                                             </div>
                                             <div class="img-div">
-                                                <img src="" class="card-img-top" alt="" id="y-image">
+                                                <img src="" class="card-img-top" id="y-image">
                                             </div>
                                             <div class="card-body">
                                                 <h5 class="card-title" id="y-restaurant"></h5>
@@ -260,7 +260,7 @@
                                                 Large Events
                                             </div>
                                             <div class="img-div">
-                                                <img src="" class="card-img-top" alt="" id="tm-image">
+                                                <img src="" class="card-img-top" id="tm-image">
                                             </div>
                                             <div class="card-body">
                                                 <h5 class="card-title" id="tm-name"></h5>
@@ -274,7 +274,7 @@
                                                 Local Events
                                             </div>
                                             <div class="img-div">
-                                                <img src="" class="card-img-top" alt="" id="eb-image">
+                                                <img src="" class="card-img-top" id="eb-image">
                                             </div>
                                             <div class="card-body">
                                                 <h5 class="card-title" id="eb-name"></h5>
@@ -294,7 +294,7 @@
                                                 Hidden Gems
                                             </div>
                                             <div class="img-div">
-                                                <img src="" class="card-img-top" alt="" id="sup-image">
+                                                <img src="" class="card-img-top" id="sup-image">
                                             </div>
                                             <div class="card-body">
                                                 <h5 class="card-title" id="sup-business"></h5>
